--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 		<script src="js/libs/signals.min.js"></script>
 
-		<script async src="https://unpkg.com/es-module-shims@1.3.6/dist/es-module-shims.js"></script>
+		<!-- <script async src="https://unpkg.com/es-module-shims@1.3.6/dist/es-module-shims.js"></script> -->
 
 		<script type="importmap">
 			{
